* Mon Jan 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
- New pki scheme
- Real integers and simplib types implemented

* Tue Dec 20 2016 Nick Miller <nick.miller@onyxpoint.com> 7.0.0-0
- Added management of the /etc/ftpusers file

* Mon Dec 12 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.0-0
- Use simp_options module for global catalysts
- Fixed bug whereby manifest would fail to compile if the force_dot_files
  parameter of ::vsftpd::config was set
- Fixed bug whereby vsftpd.conf configuration values to be set to 'NO'
  were not written out to that file
- Fixed bug whereby listen configuration parameter for vsftpd.conf was
  not set based on $listen_ipv4 parameter of ::vsftpd
- Convert to explicit parameter types

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 6.0.0-0
- Fix dependancies for simp 6 bump

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.0.0-0
- Remove compliance map and General Housekeeping

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 5.0.8-0
- Updated iptables dependency version

* Wed Sep 28 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 5.0.5-0
- Fix Forge `haveged` dependency name

* Mon Jul 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.4-0
- Migration to semantic versioning and fix of the build system

* Thu Jun 30 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.3-0
- Use_haveged is now a global catalyst.

* Mon Jun 27 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.2-0
- Pupmod-haveged included by default to assist with entropy generation.

* Wed May 18 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 5.0.1-0
- Sanitize code for `STRICT_VARIABLES=yes`

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.0-2
- Added compliance function support

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 5.0.0-1
- migration to simplib and simpcat (lib/ only)

* Fri Jul 17 2015 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.0-0