@@ -3,9 +3,9 @@
 #
 # @param pki
 #   * If 'simp', include SIMP's pki module and use pki::copy to manage
-#     application certs in /etc/pki/simp_apps/vsftpd/pki
+#     application certs in /etc/pki/simp_apps/vsftpd/x509
 #   * If true, do *not* include SIMP's pki module, but still use pki::copy
-#     to manage certs in /etc/pki/simp_apps/vsftpd/pki
+#     to manage certs in /etc/pki/simp_apps/vsftpd/x509
 #   * If false, do not include SIMP's pki module and do not use pki::copy
 #     to manage certs.  You will need to appropriately assign a subset of:
 #     * app_pki_dir
@@ -16,7 +16,7 @@
 #
 # @param app_pki_external_source
 #   * If pki = 'simp' or true, this is the directory from which certs will be
-#     copied, via pki::copy.  Defaults to /etc/pki/simp.
+#     copied, via pki::copy.  Defaults to /etc/pki/simp/x509.
 #
 #   * If pki = false, this variable has no effect.
 #
@@ -131,8 +131,8 @@ class vsftpd::config (
   Optional[Stdlib::Absolutepath]  $message_file             = undef,
   Optional[String]                $nopriv_user              = undef,
   Optional[String]                $pasv_address             = undef,
-  Stdlib::Absolutepath            $app_pki_external_source  = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp' }),
-  Stdlib::Absolutepath            $app_pki_dir              = '/etc/pki/simp_apps/vsftpd/pki',
+  Stdlib::Absolutepath            $app_pki_external_source  = simplib::lookup('simp_options::pki::source', { 'default_value' => '/etc/pki/simp/x509' }),
+  Stdlib::Absolutepath            $app_pki_dir              = '/etc/pki/simp_apps/vsftpd/x509',
   Stdlib::Absolutepath            $app_pki_cert             = "${app_pki_dir}/public/${::fqdn}.pub",
   Stdlib::Absolutepath            $app_pki_key              = "${app_pki_dir}/private/${::fqdn}.pem",
   Stdlib::Absolutepath            $app_pki_ca               = "${app_pki_dir}/cacerts/cacerts.pem",
