@@ -50,9 +50,9 @@ ssl_sslv2=NO
 ssl_sslv3=NO
 ssl_tlsv1=YES
 ssl_ciphers=DEFAULT:!MEDIUM
-rsa_cert_file=/etc/pki/simp_apps/vsftpd/pki/public/foo.example.com.pub
-rsa_private_key_file=/etc/pki/simp_apps/vsftpd/pki/private/foo.example.com.pem
-ca_certs_file=/etc/pki/simp_apps/vsftpd/pki/cacerts/cacerts.pem
+rsa_cert_file=/etc/pki/simp_apps/vsftpd/x509/public/foo.example.com.pub
+rsa_private_key_file=/etc/pki/simp_apps/vsftpd/x509/private/foo.example.com.pem
+ca_certs_file=/etc/pki/simp_apps/vsftpd/x509/cacerts/cacerts.pem
 validate_cert=YES
 anon_upload_enable=YES
 anonymous_enable=YES
