@@ -1,6 +1,7 @@
 * Mon Jan 09 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.0.0-0
 - New pki scheme
 - Real integers and simplib types implemented
+- Application certs now managed in /etc/pki/simp_apps/vsftpd/x509
 
 * Tue Dec 20 2016 Nick Miller <nick.miller@onyxpoint.com> 7.0.0-0
 - Added management of the /etc/ftpusers file
